bugfix: btn text wraps to new line if needed
- this was already mostly fixed by making the cards responsive
- I still included it in case I make any REEAALLY long button text later

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -4,7 +4,7 @@
 @import "main";
 
 .btn {
-  overflow-wrap: break-word;
+  white-space: normal;
 }
 
 .card {
